fixed contrast and added png

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,7 +13,7 @@ p{
 }
 
 button{
-    background: palevioletred;
+    background: #3f51b5;
     color: white;
     text-decoration: none;
     border-radius: 25px;
@@ -24,7 +24,7 @@ button{
 }
 
 a{
-    background: palevioletred;
+    background: #3f51b5;
     color: white;
     text-decoration: none;
     border-radius: 25px;
@@ -77,7 +77,7 @@ label.size{
 }
 
 input[name=size]:checked + label{
-    background: #db7093;
+    background: #3f51b5;
     color: white;
 }
 
@@ -107,7 +107,7 @@ input[value=black] + label{
 }
 
 input[name=color]:checked + label{
-    background: #db7093;
+    background: #3f51b5;
     color: white;
 }
 
